--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,17 +1,15 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>19 июн: <DD><a href="/catalog/cat52.shtml" title="Расширен ассортимент"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
+  <DT>09 июл: <DD><a href="/catalog/cat615.shtml"><span class="title" title="Новый товар">Набор ключей</span><span class="dop" title="Набор ключей гаечных двухсторонних накидных коленчатых"> накидных</span></a><br>
+  <DT>08 июл: <DD><a href="/catalog/cat88.shtml" ><span class="title" title="Новые товары">Рабочие перчатки</span><span class="dop" title="Перчатки кислотощелочестойкие"> КЩС</span></a><br>
+  <DT>06 июл: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
+  <DT>19 июн: <DD><a href="/catalog/cat52.shtml"  title="Расширен ассортимент"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
   <DT>18 июн: <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные перчатки</span><span class="dop"> HARDY</span></a><br>
   <DT>04 июн: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
   <DT>25 мая: <DD><a href="/catalog/cat216.shtml" title="Цены снижены. Распродажа!"><span class="title">Дрели ударные</span><span class="dop"> GR&Ouml;NE</span></a><br>
   <DT>22 мая: <DD><a href="/catalog/cat301.shtml" title="Новый товар"><span class="title">Уровень строит.</span><span class="dop"> HARDY Profi</span></a><br>
   <DT>21 мая: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены </span><span class="dop"></span></a><br>
   <DT>18 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика </span><span class="dop"></span></a><br>
-  <DT>20 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Силикон строительный</span><span class="dop"> SOUDAL</span></a><br>
-  <DT>19 апр: <DD><a href="/catalog/cat270.shtml" title="Новые товары"><span class="title">Монтажный клей</span><span class="dop"> T-REX</span></a><br>
-  <DT>18 апр: <DD><a href="/catalog/cat194.shtml" title="Новый товар"><span class="title">Очиститель монт. пены</span><span class="dop"> Profil</span></a><br>
-  <DT>16 апр: <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор HP3-0101</span><span class="dop"> кл.з. FFP1</span></a><br>
-  <DT>13 апр: <DD><a href="/catalog/cat585.shtml" title="Новые товары"><span class="title">Мини-валики сменные</span><span class="dop"> Синтекс</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
