--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -40,7 +40,8 @@
 <div class="ref">{REL_CAT}</div>
 Свойства для сортировки - №№ категорий:
 {507,508,516}
-{175,23,506}
+{506,23,85}
+,506,23,85}
 ============================== Инфоблоки
 Сделал настройку в модуле "Каталог товаров" - no_goods_text - она выводится, когда нет списка товаров.
 "Товар временно отсутствует в продаже"
@@ -60,30 +61,9 @@
 РАСПРОДАЖА 1
 <table class="ref"><tr><td class="adv">РАСПРОДАЖА кистей плоских!<td>{REL_CAT}</table>
 <table class="ref"><tr><td class="adv">Рукоятки для сменных валиков:<td>{REL_CAT}</table>
-============================== Это вставлять в CMS стр. "Редактирование/Удаление категории" в поле "Описание":
-<div class="refbanner"><a href="cat203.shtml"><table><tr><td class="refbantab"><table cellpadding="4">
-  <tr class="hdr"><td colspan="4">а также: Снегоуборочный инвентарь</td></tr><tr>
-  <td
-    ><img src="/img/pic/strhoz/small/LOPATA SNEG ALLUMINIJ.jpg"
-    ><img src="/img/pic/strhoz/small/ZV01.jpg"
-    ><img src="/img/pic/strhoz/small/ZV02.png"
-  ></td>
-  <td><img src="/img/pic/strhoz/small/dvij0.jpg"></td>
-  <td><img src="/img/pic/strhoz/small/LEDORUB TOPOR.jpg"></td>
-  <td><img src="/img/pic/strhoz/small/LEDORUB SKREBOK.jpg"></td>
-</tr><tr class="sub">
-  <td>Лопаты снеговые и уборочные</td>
-  <td>Движки для снега</td>
-  <td>Ледорубы</td>
-  <td>Скребки</td>
-</tr>
-</table></td></tr></table></a></div>
-  ==============================
-
-<br>Распродажа ограничена количеством товара на складе.
 
 Указанные цены являются ориентировочными и могут меняться в зависимости фасовки и наличия на складе. Окончательные цены и фасовки, пожалуйста, уточняйте у менеджеров.
-
+<br>Распродажа ограничена количеством товара на складе.
 <br>На странице <a href="/catalog/cat.shtml">"Распродажа "</a> &mdash; по особенно низким ценам.
 <br>Основной ассортимент н представлен на странице <a href="/catalog/cat.shtml">""</a>.
 <br>Основной ассортимент н представлен на страницах <a href="/catalog/cat.shtml">""</a> и <a href="/catalog/cat.shtml"></a>.
@@ -179,6 +159,60 @@
 <div class="art">a</div>
   <p class="price-none">b</p>
 <p class="c">c</p>
+
+======== ??????????? ========= Это вставлять в CMS стр. "Редактирование/Удаление категории" в поле "Описание":
+<div class="refbanner"><table><tr><td class="refbantab"><table cellpadding="3">
+  <tr class="hdr"><td colspan="8"><a href="cat358.shtml">Смотрите также: Клининг</a></td></tr><tr>
+  <td style="width: 200px;"><a href="cat366.shtml"><img src="/img/pic/clean/small/LIQ-03_2h.jpg"></a></td>
+  <td style="width: 200px;"><a href="cat362.shtml"><img src="/img/pic/clean/small/ZS05h.jpg"></a></td>
+  <td style="width: 200px;"><a href="cat361.shtml"><img src="/img/pic/clean/small/ARCTIS_D-55n.jpg"></a></td>
+</tr><tr class="sub">
+  <td><a href="cat366.shtml">Жидкое мыло</a></td>
+  <td><a href="cat362.shtml">Средства для стекол и посуды</a></td>
+  <td><a href="cat361.shtml">Универсальные моющие средства</a></td>
+</tr>
+</table></td><td width=30%></tr></table></div>
+======== Лопаты -> =========== Это вставлять в CMS стр. "Редактирование/Удаление категории" в поле "Описание":
+<div class="refbanner"><a href="cat203.shtml"><table><tr><td class="refbantab"><table cellpadding="4">
+  <tr class="hdr"><td colspan="4">а также: Снегоуборочный инвентарь</td></tr><tr>
+  <td
+  ><img src="/img/pic/strhoz/small/LOPATA SNEG ALLUMINIJ.jpg"
+  ><img src="/img/pic/strhoz/small/ZV01.jpg"
+  ><img src="/img/pic/strhoz/small/ZV02.png"
+  ></td>
+  <td><img src="/img/pic/strhoz/small/dvij0.jpg"></td>
+  <td><img src="/img/pic/strhoz/small/LEDORUB TOPOR.jpg"></td>
+  <td><img src="/img/pic/strhoz/small/LEDORUB SKREBOK.jpg"></td>
+</tr><tr class="sub">
+  <td>Лопаты снеговые и уборочные</td>
+  <td>Движки для снега</td>
+  <td>Ледорубы</td>
+  <td>Скребки</td>
+</tr>
+</table></td></tr></table></a></div>
+======== Краски -> =========== Это вставлять в CMS стр. "Редактирование/Удаление категории" в поле "Описание":
+<div class="refbanner"><table><tr><td class="refbantab"><table cellpadding="4">
+  <tr class="hdr"><td colspan="8"><a href="cat506.shtml">Смотрите также: Малярный и штукатурный инструмент</a></td></tr><tr>
+  <td><a href="cat508.shtml"><img src="/img/pic/shmal/small/SER_42.jpg"></a></td>
+  <td><a href="cat507.shtml"><img src="/img/pic/shmal/small/0110-71.jpg"></a></td>
+  <td><a href="cat510.shtml"><img src="/img/pic/shmal/small/GLADILKA.jpg"></a></td>
+  <td><a href="cat512.shtml"><img src="/img/pic/shmal/small/KELMA%20KSH.jpg"></a></td>
+  <td><a href="cat511.shtml"><img src="/img/pic/shmal/small/TERKA%20POLIU---.jpg"></a></td>
+  <td><a href="cat513.shtml"><img src="/img/pic/shmal/small/SPATELI%20MATRIX%20MASTER.jpg"></a></td>
+  <td><a href="cat515.shtml"><img src="/img/pic/strhoz/small/0147-91.jpg"></a></td>
+  <td><a href="cat506.shtml"><img src="/img/pic/instr/small/PRAVILO%20TRAPEZIA.jpg"></a></td>
+</tr><tr class="sub">
+  <td><a href="cat508.shtml">Кисти</a></td>
+  <td><a href="cat507.shtml">Валики</a></td>
+  <td><a href="cat510.shtml">Гладилки</a></td>
+  <td><a href="cat511.shtml">Кельмы</a></td>
+  <td><a href="cat513.shtml">Тёрки</a></td>
+  <td><a href="cat513.shtml">Шпатели</a></td>
+  <td><a href="cat513.shtml">Малярные вёдра</a></td>
+  <td><a href="cat506.shtml">и многое другое</a></td>
+</tr>
+</table></td></tr></table></div>
+==============================
 
 ==============================
 <table id="test" class="emmet" cellpadding="0">
