--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,8 @@
+<DT>20 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Силикон строительный</span><span class="dop"> SOUDAL</span></a><br>
+<DT>19 апр: <DD><a href="/catalog/cat270.shtml" title="Новые товары"><span class="title">Монтажный клей</span><span class="dop"> T-REX</span></a><br>
+<DT>18 апр: <DD><a href="/catalog/cat194.shtml" title="Новый товар"><span class="title">Очиститель монт. пены</span><span class="dop"> Profil</span></a><br>
+<DT>16 апр: <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор HP3-0101</span><span class="dop"> кл.з. FFP1</span></a><br>
+<DT>13 апр: <DD><a href="/catalog/cat585.shtml" title="Новые товары"><span class="title">Мини-валики сменные</span><span class="dop"> Синтекс</span></a><br>
 <DT>04 апр: <DD><a href="/catalog/cat24.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена: Круг отрезной по металлу 230 х 2.5 х 22"><span class="title">Круг отрезной по металлу</span><span class="dop"></span></a><br>
 <DT>26 мар: <DD><a href="/catalog/cat138.shtml" title="Новые товары: Кувалды кованые HARDAX с удлиненной (900 мм) обрезиненной фибергласовой рукояткой"><span class="title">Кувалды на длинной рукоятке</span><span class="dop"></span></a><br>
 <DT>21 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Строительные рулетки</span><span class="dop"> BOHRER</span></a><br>
