--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,15 +1,15 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 июл: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи</span><span class="dop"> с выдвижным лезвием</span></a><br>
+  <DT>19 июл: <DD><a href="/catalog/cat552.shtml" title="Расширен ассортимент"><span class="title">Шнуры и краски разметочные</span><span class="dop"></span></a><br>
+  <DT>18 июл: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
+  <DT>17 июл: <DD><a href="/catalog/cat601.shtml" title="Новый товар"><span class="title">Шпагат полипропиленовый</span><span class="dop"></span></a><br>
+  <DT>16 июл: <DD><a href="/catalog/cat105.shtml" title="Расширен ассортимент"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
   <DT>09 июл: <DD><a href="/catalog/cat615.shtml"><span class="title" title="Новый товар">Набор ключей</span><span class="dop" title="Набор ключей гаечных двухсторонних накидных коленчатых"> накидных</span></a><br>
   <DT>08 июл: <DD><a href="/catalog/cat88.shtml" ><span class="title" title="Новые товары">Рабочие перчатки</span><span class="dop" title="Перчатки кислотощелочестойкие"> КЩС</span></a><br>
   <DT>06 июл: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
   <DT>19 июн: <DD><a href="/catalog/cat52.shtml"  title="Расширен ассортимент"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
   <DT>18 июн: <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные перчатки</span><span class="dop"> HARDY</span></a><br>
-  <DT>04 июн: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
-  <DT>25 мая: <DD><a href="/catalog/cat216.shtml" title="Цены снижены. Распродажа!"><span class="title">Дрели ударные</span><span class="dop"> GR&Ouml;NE</span></a><br>
-  <DT>22 мая: <DD><a href="/catalog/cat301.shtml" title="Новый товар"><span class="title">Уровень строит.</span><span class="dop"> HARDY Profi</span></a><br>
-  <DT>21 мая: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены </span><span class="dop"></span></a><br>
-  <DT>18 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика </span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -23,18 +23,6 @@
         <p>
           <span class="title">Тенты защитные</span><span class="dop"><br>HARDY (Польша)</span>
           <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
-        </p></a>
-  </table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/shmal/big/0110-684818.jpg" title="Большое фото: Профессиональные валики ProPlus (HARDY, Польша)"><img src="/img/pic/shmal/small/0110-684818.jpg" width="98"></a>
-      </td>
-      <td class="good-txt"><a href="/catalog/cat553.shtml"
-        title="Профессиональные валики ProPlus (HARDY, Польша) на нашем сайте">
-        <p>
-          <span class="title">Профессиональные валики ProPlus</span><span class="dop"> (HARDY, Польша)</span>
-          <span class="addt"><br>для всех типов красок и лаков</span>
         </p></a>
   </table>
   <table class="one-good" cellpadding="0">
