--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,8 @@
+<DT>04 июн: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
+<DT>25 мая: <DD><a href="/catalog/cat216.shtml" title="Цены снижены. Распродажа!"><span class="title">Дрели ударные</span><span class="dop"> GR&Ouml;NE</span></a><br>
+<DT>22 мая: <DD><a href="/catalog/cat301.shtml" title="Новый товар"><span class="title">Уровень строит.</span><span class="dop"> HARDY Profi</span></a><br>
+<DT>21 мая: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены </span><span class="dop"></span></a><br>
+<DT>18 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика </span><span class="dop"></span></a><br>
 <DT>20 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Силикон строительный</span><span class="dop"> SOUDAL</span></a><br>
 <DT>19 апр: <DD><a href="/catalog/cat270.shtml" title="Новые товары"><span class="title">Монтажный клей</span><span class="dop"> T-REX</span></a><br>
 <DT>18 апр: <DD><a href="/catalog/cat194.shtml" title="Новый товар"><span class="title">Очиститель монт. пены</span><span class="dop"> Profil</span></a><br>
@@ -587,4 +592,16 @@
         class="title">Электроды сварочные</span><span
         class="dop"> пр-ва з-да СпецЭлектрод</span><span
         class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/shmal/big/0110-684818.jpg" title="Большое фото: Профессиональные валики ProPlus (HARDY, Польша)"><img src="/img/pic/shmal/small/0110-684818.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat553.shtml"
+        title="Профессиональные валики ProPlus (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Профессиональные валики ProPlus</span><span class="dop"> (HARDY, Польша)</span>
+          <span class="addt"><br>для всех типов красок и лаков</span>
+        </p></a>
   </table>
