--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,10 +1,12 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>25 июл: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Головки торцевые</span><span class="dop"> THORVIK</span></a><br>
+  <DT>23 июл: <DD><a href="/catalog/cat29.shtml"  title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Диски пильные</span><span class="dop"> RUNEX</span></a><br>
   <DT>20 июл: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи</span><span class="dop"> с выдвижным лезвием</span></a><br>
   <DT>19 июл: <DD><a href="/catalog/cat552.shtml" title="Расширен ассортимент"><span class="title">Шнуры и краски разметочные</span><span class="dop"></span></a><br>
   <DT>18 июл: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
   <DT>17 июл: <DD><a href="/catalog/cat601.shtml" title="Новый товар"><span class="title">Шпагат полипропиленовый</span><span class="dop"></span></a><br>
-  <DT>16 июл: <DD><a href="/catalog/cat105.shtml" title="Расширен ассортимент"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
+  <DT>16 июл: <DD><a href="/catalog/cat105.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
   <DT>09 июл: <DD><a href="/catalog/cat615.shtml"><span class="title" title="Новый товар">Набор ключей</span><span class="dop" title="Набор ключей гаечных двухсторонних накидных коленчатых"> накидных</span></a><br>
   <DT>08 июл: <DD><a href="/catalog/cat88.shtml" ><span class="title" title="Новые товары">Рабочие перчатки</span><span class="dop" title="Перчатки кислотощелочестойкие"> КЩС</span></a><br>
   <DT>06 июл: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
