--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесар.</span><span class="dop"> Volkshammer</span></a><br>
   <DT>25 июл: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Головки торцевые</span><span class="dop"> THORVIK</span></a><br>
   <DT>23 июл: <DD><a href="/catalog/cat29.shtml"  title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Диски пильные</span><span class="dop"> RUNEX</span></a><br>
   <DT>20 июл: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи</span><span class="dop"> с выдвижным лезвием</span></a><br>
