--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>16 авг : <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
+  <DT>13 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
   <DT>08 авг : <DD><a href="/catalog/cat27.shtml"  title="Новые товары"><span class="title">Круги лепестковые</span><span class="dop"> ZIFLEX</span></a><br>
   <DT>27 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесар.</span><span class="dop"> Volkshammer</span></a><br>
   <DT>25 июл: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Головки торцевые</span><span class="dop"> THORVIK</span></a><br>
@@ -12,8 +14,6 @@
   <DT>09 июл: <DD><a href="/catalog/cat615.shtml"><span class="title" title="Новый товар">Набор ключей</span><span class="dop" title="Набор ключей гаечных двухсторонних накидных коленчатых"> накидных</span></a><br>
   <DT>08 июл: <DD><a href="/catalog/cat88.shtml" ><span class="title" title="Новые товары">Рабочие перчатки</span><span class="dop" title="Перчатки кислотощелочестойкие"> КЩС</span></a><br>
   <DT>06 июл: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
-  <DT>19 июн: <DD><a href="/catalog/cat52.shtml"  title="Расширен ассортимент"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
-  <DT>18 июн: <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные перчатки</span><span class="dop"> HARDY</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
