--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>17 авг : <DD><a href="/catalog/cat559.shtml" title="Новый товар"><span class="title">Валик малярный</span><span class="dop"> Torino 18</span></a><br>
   <DT>16 авг : <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
   <DT>13 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
   <DT>08 авг : <DD><a href="/catalog/cat27.shtml"  title="Новые товары"><span class="title">Круги лепестковые</span><span class="dop"> ZIFLEX</span></a><br>
