--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,7 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 сен: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
   <DT>17 авг : <DD><a href="/catalog/cat559.shtml" title="Новый товар"><span class="title">Валик малярный</span><span class="dop"> Torino 18</span></a><br>
-  <DT>16 авг : <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
   <DT>13 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
   <DT>08 авг : <DD><a href="/catalog/cat27.shtml"  title="Новые товары"><span class="title">Круги лепестковые</span><span class="dop"> ZIFLEX</span></a><br>
   <DT>27 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесар.</span><span class="dop"> Volkshammer</span></a><br>
@@ -12,9 +12,6 @@
   <DT>18 июл: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
   <DT>17 июл: <DD><a href="/catalog/cat601.shtml" title="Новый товар"><span class="title">Шпагат полипропиленовый</span><span class="dop"></span></a><br>
   <DT>16 июл: <DD><a href="/catalog/cat105.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
-  <DT>09 июл: <DD><a href="/catalog/cat615.shtml"><span class="title" title="Новый товар">Набор ключей</span><span class="dop" title="Набор ключей гаечных двухсторонних накидных коленчатых"> накидных</span></a><br>
-  <DT>08 июл: <DD><a href="/catalog/cat88.shtml" ><span class="title" title="Новые товары">Рабочие перчатки</span><span class="dop" title="Перчатки кислотощелочестойкие"> КЩС</span></a><br>
-  <DT>06 июл: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
