--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,7 @@
+<DT>16 авг : <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
+<DT>09 июл: <DD><a href="/catalog/cat615.shtml"><span class="title" title="Новый товар">Набор ключей</span><span class="dop" title="Набор ключей гаечных двухсторонних накидных коленчатых"> накидных</span></a><br>
+<DT>08 июл: <DD><a href="/catalog/cat88.shtml" ><span class="title" title="Новые товары">Рабочие перчатки</span><span class="dop" title="Перчатки кислотощелочестойкие"> КЩС</span></a><br>
+<DT>06 июл: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
 <DT>19 июн: <DD><a href="/catalog/cat52.shtml"  title="Расширен ассортимент"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
 <DT>18 июн: <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные перчатки</span><span class="dop"> HARDY</span></a><br>
 <DT>04 июн: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
