--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,6 +1,10 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>08 сен: <DD><a href="/catalog/cat176.shtml" title="Расширен ассортимент"><span class="title">Силиконы, герметики</span><span class="dop"> SOUDAL</span></a><br>
+  <DT>25 сен: <DD><a href="/catalog/cat414.shtml" title="Расширен ассортимент"><span class="title">Буры по бетону</span><span class="dop"> SDS+</span></a><br>
+  <DT>24 сен: <DD><a href="/catalog/cat221.shtml" title="Цены снижены"><span class="title">Шпательная лопатка</span><span class="dop"> 100 мм</span></a><br>
+  <DT>21 сен: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
+  <DT>20 сен: <DD><a href="/catalog/cat176.shtml" title="Новые товары"><span class="title">Акриловые герметики</span><span class="dop"> SOUDAL</span></a><br>
+  <DT>17 сен: <DD><a href="/catalog/cat589.shtml" title="Расширен ассортимент: Лента упаковочная ЭКСТРЕМАЛЬНО ПРОЧНАЯ"><span class="title">Ленты упаковочные</span><span class="dop"> "Scley"</span></a><br>
   <DT>03 сен: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
   <DT>17 авг : <DD><a href="/catalog/cat559.shtml" title="Новый товар"><span class="title">Валик малярный</span><span class="dop"> Torino 18</span></a><br>
   <DT>13 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
@@ -8,11 +12,6 @@
   <DT>27 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесар.</span><span class="dop"> Volkshammer</span></a><br>
   <DT>25 июл: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Головки торцевые</span><span class="dop"> THORVIK</span></a><br>
   <DT>23 июл: <DD><a href="/catalog/cat29.shtml"  title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Диски пильные</span><span class="dop"> RUNEX</span></a><br>
-  <DT>20 июл: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи</span><span class="dop"> с выдвижным лезвием</span></a><br>
-  <DT>19 июл: <DD><a href="/catalog/cat552.shtml" title="Расширен ассортимент"><span class="title">Шнуры и краски разметочные</span><span class="dop"></span></a><br>
-  <DT>18 июл: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
-  <DT>17 июл: <DD><a href="/catalog/cat601.shtml" title="Новый товар"><span class="title">Шпагат полипропиленовый</span><span class="dop"></span></a><br>
-  <DT>16 июл: <DD><a href="/catalog/cat105.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
