--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,9 @@
+<DT>20 июл: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи</span><span class="dop"> с выдвижным лезвием</span></a><br>
+<DT>19 июл: <DD><a href="/catalog/cat552.shtml" title="Расширен ассортимент"><span class="title">Шнуры и краски разметочные</span><span class="dop"></span></a><br>
+<DT>18 июл: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
+<DT>17 июл: <DD><a href="/catalog/cat601.shtml" title="Новый товар"><span class="title">Шпагат полипропиленовый</span><span class="dop"></span></a><br>
+<DT>16 июл: <DD><a href="/catalog/cat105.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
+<DT>08 сен: <DD><a href="/catalog/cat176.shtml" title="Расширен ассортимент"><span class="title">Силиконы, герметики</span><span class="dop"> SOUDAL</span></a><br>
 <DT>16 авг : <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
 <DT>09 июл: <DD><a href="/catalog/cat615.shtml"><span class="title" title="Новый товар">Набор ключей</span><span class="dop" title="Набор ключей гаечных двухсторонних накидных коленчатых"> накидных</span></a><br>
 <DT>08 июл: <DD><a href="/catalog/cat88.shtml" ><span class="title" title="Новые товары">Рабочие перчатки</span><span class="dop" title="Перчатки кислотощелочестойкие"> КЩС</span></a><br>
