--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 окт: <DD><a href="/catalog/cat175.shtml" title="Новый товар по ИСКЛЮЧИТЕЛЬНО НИЗКОЙ ЦЕНЕ"><span class="title">Пена монтажная</span><span class="dop"> Soudal ЗИМНЯЯ</span></a><br>
   <DT>25 сен: <DD><a href="/catalog/cat414.shtml" title="Расширен ассортимент"><span class="title">Буры по бетону</span><span class="dop"> SDS+</span></a><br>
   <DT>24 сен: <DD><a href="/catalog/cat221.shtml" title="Цены снижены"><span class="title">Шпательная лопатка</span><span class="dop"> 100 мм</span></a><br>
   <DT>21 сен: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
