--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>10 окт: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>10 окт: <DD><a href="/catalog/cat228.shtml" title="Цены снижены"><span class="title">Ветошь,</span><span class="dop"> трикотаж цветной ХБ</span></a><br>
+  <DT>09 окт: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент:&#xa;- Резак с сегм. лезвием 25 мм в металлическом корпусе с автофиксатором;&#xa;- Лезвия для ножей 25 x 125 мм, 6 сегментов."><span class="title">Строительные ножи и лезвия</span><span class="dop"></span></a><br>
   <DT>03 окт: <DD><a href="/catalog/cat175.shtml" title="Новый товар по ИСКЛЮЧИТЕЛЬНО НИЗКОЙ ЦЕНЕ"><span class="title">Пена монтажная</span><span class="dop"> Soudal ЗИМНЯЯ</span></a><br>
   <DT>25 сен: <DD><a href="/catalog/cat414.shtml" title="Расширен ассортимент"><span class="title">Буры по бетону</span><span class="dop"> SDS+</span></a><br>
   <DT>24 сен: <DD><a href="/catalog/cat221.shtml" title="Цены снижены"><span class="title">Шпательная лопатка</span><span class="dop"> 100 мм</span></a><br>
@@ -7,25 +10,19 @@
   <DT>20 сен: <DD><a href="/catalog/cat176.shtml" title="Новые товары"><span class="title">Акриловые герметики</span><span class="dop"> SOUDAL</span></a><br>
   <DT>17 сен: <DD><a href="/catalog/cat589.shtml" title="Расширен ассортимент: Лента упаковочная ЭКСТРЕМАЛЬНО ПРОЧНАЯ"><span class="title">Ленты упаковочные</span><span class="dop"> "Scley"</span></a><br>
   <DT>03 сен: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
-  <DT>17 авг : <DD><a href="/catalog/cat559.shtml" title="Новый товар"><span class="title">Валик малярный</span><span class="dop"> Torino 18</span></a><br>
-  <DT>13 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
-  <DT>08 авг : <DD><a href="/catalog/cat27.shtml"  title="Новые товары"><span class="title">Круги лепестковые</span><span class="dop"> ZIFLEX</span></a><br>
-  <DT>27 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесар.</span><span class="dop"> Volkshammer</span></a><br>
-  <DT>25 июл: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Головки торцевые</span><span class="dop"> THORVIK</span></a><br>
-  <DT>23 июл: <DD><a href="/catalog/cat29.shtml"  title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Диски пильные</span><span class="dop"> RUNEX</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1>
-        <a class="cboxElement" href="/img/pic/equip/big/0440-840305.jpg" title="Большое фото: Тенты защитные HARDY (Польша)"><img src="/img/pic/equip/small/0440-840305.jpg" width="98"></a>
+        <a class="cboxElement" href="/img/pic/instr/big/15-1-515.jpg" title="Большое фото: Рулетки Т2 Hobbi"><img src="/img/pic/instr/small/15-1-515.jpg" width="98"></a>
       </td>
-      <td class="good-txt"><a href="/catalog/cat579.shtml"
-        title="Тенты защитные HARDY (Польша) на нашем сайте">
+      <td class="good-txt"><a href="/catalog/cat72.shtml"
+        title="Рулетки Т2 Hobbi на нашем сайте">
         <p>
-          <span class="title">Тенты защитные</span><span class="dop"><br>HARDY (Польша)</span>
-          <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
+          <span class="title">Строительные рулетки</span><span class="dop"> Т2 Hobbi,<br> от 3 до 10 м:</span>
+          <span class="addt"><br>обрезиненный корпус,<br>усиленная лента,<br>два фиксатора</span>
         </p></a>
   </table>
   <table class="one-good" cellpadding="0">
