--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,10 @@
+<DT>11 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
+<DT>17 авг : <DD><a href="/catalog/cat559.shtml" title="Новый товар"><span class="title">Валик малярный</span><span class="dop"> Torino 18</span></a><br>
+<DT>13 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
+<DT>08 авг : <DD><a href="/catalog/cat27.shtml"  title="Новые товары"><span class="title">Круги лепестковые</span><span class="dop"> ZIFLEX</span></a><br>
+<DT>27 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесар.</span><span class="dop"> Volkshammer</span></a><br>
+<DT>25 июл: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Головки торцевые</span><span class="dop"> THORVIK</span></a><br>
+<DT>23 июл: <DD><a href="/catalog/cat29.shtml"  title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Диски пильные</span><span class="dop"> RUNEX</span></a><br>
 <DT>20 июл: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи</span><span class="dop"> с выдвижным лезвием</span></a><br>
 <DT>19 июл: <DD><a href="/catalog/cat552.shtml" title="Расширен ассортимент"><span class="title">Шнуры и краски разметочные</span><span class="dop"></span></a><br>
 <DT>18 июл: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
@@ -615,5 +622,17 @@
         <p>
           <span class="title">Профессиональные валики ProPlus</span><span class="dop"> (HARDY, Польша)</span>
           <span class="addt"><br>для всех типов красок и лаков</span>
+        </p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1>
+        <a class="cboxElement" href="/img/pic/equip/big/0440-840305.jpg" title="Большое фото: Тенты защитные HARDY (Польша)"><img src="/img/pic/equip/small/0440-840305.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat579.shtml"
+        title="Тенты защитные HARDY (Польша) на нашем сайте">
+        <p>
+          <span class="title">Тенты защитные</span><span class="dop"><br>HARDY (Польша)</span>
+          <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
         </p></a>
   </table>
