--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>12 окт: <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
+  <DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
+  <DT>11 окт: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>10 окт: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>10 окт: <DD><a href="/catalog/cat228.shtml" title="Цены снижены"><span class="title">Ветошь,</span><span class="dop"> трикотаж цветной ХБ</span></a><br>
   <DT>09 окт: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент:&#xa;- Резак с сегм. лезвием 25 мм в металлическом корпусе с автофиксатором;&#xa;- Лезвия для ножей 25 x 125 мм, 6 сегментов."><span class="title">Строительные ножи и лезвия</span><span class="dop"></span></a><br>
@@ -9,7 +12,6 @@
   <DT>21 сен: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
   <DT>20 сен: <DD><a href="/catalog/cat176.shtml" title="Новые товары"><span class="title">Акриловые герметики</span><span class="dop"> SOUDAL</span></a><br>
   <DT>17 сен: <DD><a href="/catalog/cat589.shtml" title="Расширен ассортимент: Лента упаковочная ЭКСТРЕМАЛЬНО ПРОЧНАЯ"><span class="title">Ленты упаковочные</span><span class="dop"> "Scley"</span></a><br>
-  <DT>03 сен: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
