.lowp1.lowall etc

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,4 +1,5 @@
 <DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
+<DT>21 сен: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
 <DT>03 сен: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
 <DT>17 авг : <DD><a href="/catalog/cat559.shtml" title="Новый товар"><span class="title">Валик малярный</span><span class="dop"> Torino 18</span></a><br>
 <DT>13 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
