--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 окт: <DD><a href="/catalog/cat188.shtml" title="Расширен ассортимент"><span class="title">Степлеры скобозабивные</span><span class="dop"> MiLES</span></a><br>
   <DT>12 окт: <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
   <DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
   <DT>11 окт: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
@@ -9,7 +10,6 @@
   <DT>03 окт: <DD><a href="/catalog/cat175.shtml" title="Новый товар по ИСКЛЮЧИТЕЛЬНО НИЗКОЙ ЦЕНЕ"><span class="title">Пена монтажная</span><span class="dop"> Soudal ЗИМНЯЯ</span></a><br>
   <DT>25 сен: <DD><a href="/catalog/cat414.shtml" title="Расширен ассортимент"><span class="title">Буры по бетону</span><span class="dop"> SDS+</span></a><br>
   <DT>24 сен: <DD><a href="/catalog/cat221.shtml" title="Цены снижены"><span class="title">Шпательная лопатка</span><span class="dop"> 100 мм</span></a><br>
-  <DT>21 сен: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
   <DT>20 сен: <DD><a href="/catalog/cat176.shtml" title="Новые товары"><span class="title">Акриловые герметики</span><span class="dop"> SOUDAL</span></a><br>
   <DT>17 сен: <DD><a href="/catalog/cat589.shtml" title="Расширен ассортимент: Лента упаковочная ЭКСТРЕМАЛЬНО ПРОЧНАЯ"><span class="title">Ленты упаковочные</span><span class="dop"> "Scley"</span></a><br>
 </DL><!-- >=====================< -->
