--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -17,6 +17,18 @@
   <h2>Рекомендуемые товары</h2>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/drill/big/cobalt-sverlo.jpg"><img
+        src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"
+        title="Твердосплавные свёрла по металлу"></a></td>
+      <td class="good-txt"><a href="/catalog/cat415.shtml"
+        title="Большое фото: Твердосплавные свёрла по металлу на нашем сайте"><p><span
+        class="title">Твердосплавные свёрла по металлу</span><span
+        class="dop"><br>HAGWERT<br>"Power-Сobalt"</span><span
+        class="addt"><br>фрезерованные шлифованные</span></p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
       <td align="center" width=1>
         <a class="cboxElement" href="/img/pic/instr/big/15-1-515.jpg" title="Большое фото: Рулетки Т2 Hobbi"><img src="/img/pic/instr/small/15-1-515.jpg" width="98"></a>
       </td>
@@ -36,18 +48,6 @@
         title="Круги отрезные по металлу (Луга) на нашем сайте"><p>
         <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода)</span><span class="addt">,<br>разные размеры</span>
       </p></a>
-  </table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/strhoz/big/0300-88.jpg"><img
-        src="/img/pic/strhoz/small/0300-88.jpg" width="98"
-        title="Лента малярная синяя"></a></td>
-      <td class="good-txt"><a href="/catalog/cat588.shtml"
-        title="Большое фото: Лента малярная синяя на нашем сайте"><p><span
-        class="title">Лента малярная синяя</span><span
-        class="dop"><br>"Scley" (Польша)</span><span
-        class="addt">,<br>особо устойчивая к разрывам тисненая бумажная лента</span></p></a>
   </table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
