--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -638,3 +638,15 @@
           <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
         </p></a>
   </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/strhoz/big/0300-88.jpg"><img
+        src="/img/pic/strhoz/small/0300-88.jpg" width="98"
+        title="Лента малярная синяя"></a></td>
+      <td class="good-txt"><a href="/catalog/cat588.shtml"
+        title="Большое фото: Лента малярная синяя на нашем сайте"><p><span
+        class="title">Лента малярная синяя</span><span
+        class="dop"><br>"Scley" (Польша)</span><span
+        class="addt">,<br>особо устойчивая к разрывам тисненая бумажная лента</span></p></a>
+  </table>
