--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>29 окт: <DD><a href="/catalog/cat24.shtml"  title="Новый товар: Круг отрезной по металлу пр-ва Лужского Абразивного завода&#xa;125 х 1.2 х 22 мм PREMIUM"><span class="title">Круг отрезной Луга</span><span class="dop"> PREMIUM</span></a><br>
   <DT>15 окт: <DD><a href="/catalog/cat188.shtml" title="Расширен ассортимент"><span class="title">Степлеры скобозабивные</span><span class="dop"> MiLES</span></a><br>
   <DT>12 окт: <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
   <DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
