--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,7 @@
+<DT>25 сен: <DD><a href="/catalog/cat414.shtml" title="Расширен ассортимент"><span class="title">Буры по бетону</span><span class="dop"> SDS+</span></a><br>
+<DT>24 сен: <DD><a href="/catalog/cat221.shtml" title="Цены снижены"><span class="title">Шпательная лопатка</span><span class="dop"> 100 мм</span></a><br>
+<DT>20 сен: <DD><a href="/catalog/cat176.shtml" title="Новые товары"><span class="title">Акриловые герметики</span><span class="dop"> SOUDAL</span></a><br>
+<DT>17 сен: <DD><a href="/catalog/cat589.shtml" title="Расширен ассортимент: Лента упаковочная ЭКСТРЕМАЛЬНО ПРОЧНАЯ"><span class="title">Ленты упаковочные</span><span class="dop"> "Scley"</span></a><br>
 <DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
 <DT>21 сен: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер "3 в 1"</span><span class="dop"> MiLES</span></a><br>
 <DT>03 сен: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
