--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -87,8 +87,10 @@
 <span class="p3"><br><b>Крупнооптовая</b> &mdash; при сумме счета от <b>50 тысяч</b> рублей.</span></span>
 <span class="const"><br>Постоянным клиентам &mdash; особые условия.</span>
 
+============================== в Альтернативный шаблон, чтоб появилось после таблиц ========================================
 <p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
 <p class="price-none">К указанным на сайте ценам могут быть применены скидки.</p>
+============================== Без Цен: в Альтернативный шаблон, чтоб появилось под заголовком (место дано для .ot37) ======
 <p class="subtit price-none">О наличии товара и действующих ценах осведомляйтесь у менеджеров.</p>
 <p class="subtit price-none">Действующие цены на данные позиции узнавайте у менеджеров.</p>
 <p class="subtit price-none">Количество товара на данный день ограничено остатками на складах.</p>
