--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,6 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>08 ноя: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены"><span class="title">Саморезы по дереву и т.п.</span><span class="dop"></span></a><br>
+  <DT>12 ноя: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт</span><span class="dop"> ГФ-021</span></a><br>
+  <DT>08 ноя: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
   <DT>06 ноя: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки закругленные</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
   <DT>05 ноя: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Обогреватели масляные</span><span class="dop"> ZANUSSI</span></a><br>
   <DT>31 окт: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
@@ -12,7 +13,6 @@
   <DT>10 окт: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>10 окт: <DD><a href="/catalog/cat228.shtml" title="Цены снижены"><span class="title">Ветошь,</span><span class="dop"> трикотаж цветной ХБ</span></a><br>
   <DT>09 окт: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент:&#xa;- Резак с сегм. лезвием 25 мм в металлическом корпусе с автофиксатором;&#xa;- Лезвия для ножей 25 x 125 мм, 6 сегментов."><span class="title">Строительные ножи и лезвия</span><span class="dop"></span></a><br>
-  <DT>03 окт: <DD><a href="/catalog/cat175.shtml" title="Новый товар по ИСКЛЮЧИТЕЛЬНО НИЗКОЙ ЦЕНЕ"><span class="title">Пена монтажная</span><span class="dop"> Soudal ЗИМНЯЯ</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
