--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,4 @@
+<DT>03 окт: <DD><a href="/catalog/cat175.shtml" title="Новый товар по ИСКЛЮЧИТЕЛЬНО НИЗКОЙ ЦЕНЕ"><span class="title">Пена монтажная</span><span class="dop"> Soudal ЗИМНЯЯ</span></a><br>
 <DT>25 сен: <DD><a href="/catalog/cat414.shtml" title="Расширен ассортимент"><span class="title">Буры по бетону</span><span class="dop"> SDS+</span></a><br>
 <DT>24 сен: <DD><a href="/catalog/cat221.shtml" title="Цены снижены"><span class="title">Шпательная лопатка</span><span class="dop"> 100 мм</span></a><br>
 <DT>20 сен: <DD><a href="/catalog/cat176.shtml" title="Новые товары"><span class="title">Акриловые герметики</span><span class="dop"> SOUDAL</span></a><br>
