--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 ноя: <DD><a href="/catalog/cat101.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
   <DT>12 ноя: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт</span><span class="dop"> ГФ-021</span></a><br>
   <DT>08 ноя: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
   <DT>06 ноя: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки закругленные</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
@@ -31,13 +32,13 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1>
-        <a class="cboxElement" href="/img/pic/instr/big/15-1-515.jpg" title="Большое фото: Рулетки Т2 Hobbi"><img src="/img/pic/instr/small/15-1-515.jpg" width="98"></a>
+        <a class="cboxElement" href="/img/pic/instr/big/570519.jpg" title="Большое фото: Рулетки EFFECTA"><img src="/img/pic/instr/small/570519.jpg" width="98"></a>
       </td>
       <td class="good-txt"><a href="/catalog/cat72.shtml"
-        title="Рулетки Т2 Hobbi на нашем сайте">
+        title="Рулетки EFFECTA на нашем сайте">
         <p>
-          <span class="title">Строительные рулетки</span><span class="dop"> Т2 Hobbi,<br> от 3 до 10 м:</span>
-          <span class="addt"><br>обрезиненный корпус,<br>усиленная лента,<br>два фиксатора</span>
+          <span class="title">Строительные рулетки</span><span class="dop"> EFFECTA:</span>
+          <span class="addt"><br>ударопрочный обрезиненный корпус,<br>неодимовые магниты,<br>доп. боковые зацепы</span>
         </p></a>
   </table>
   <table class="one-good" cellpadding="0">
