--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>28 ноя: <DD><a href="/catalog/cat285.shtml" title="Новые товары"><span class="title">Электророзетки</span><span class="dop"></span></a><br>
   <DT>15 ноя: <DD><a href="/catalog/cat101.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
   <DT>12 ноя: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт</span><span class="dop"> ГФ-021</span></a><br>
   <DT>08 ноя: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
@@ -9,11 +10,6 @@
   <DT>29 окт: <DD><a href="/catalog/cat24.shtml"  title="Новый товар: Круг отрезной по металлу пр-ва Лужского Абразивного завода&#xa;125 х 1.2 х 22 мм PREMIUM"><span class="title">Круг отрезной Луга</span><span class="dop"> PREMIUM</span></a><br>
   <DT>15 окт: <DD><a href="/catalog/cat188.shtml" title="Расширен ассортимент"><span class="title">Степлеры скобозабивные</span><span class="dop"> MiLES</span></a><br>
   <DT>12 окт: <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
-  <DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
-  <DT>11 окт: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
-  <DT>10 окт: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
-  <DT>10 окт: <DD><a href="/catalog/cat228.shtml" title="Цены снижены"><span class="title">Ветошь,</span><span class="dop"> трикотаж цветной ХБ</span></a><br>
-  <DT>09 окт: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент:&#xa;- Резак с сегм. лезвием 25 мм в металлическом корпусе с автофиксатором;&#xa;- Лезвия для ножей 25 x 125 мм, 6 сегментов."><span class="title">Строительные ножи и лезвия</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
