--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,8 @@
+<DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
+<DT>11 окт: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
+<DT>10 окт: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+<DT>10 окт: <DD><a href="/catalog/cat228.shtml" title="Цены снижены"><span class="title">Ветошь,</span><span class="dop"> трикотаж цветной ХБ</span></a><br>
+<DT>09 окт: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент:&#xa;- Резак с сегм. лезвием 25 мм в металлическом корпусе с автофиксатором;&#xa;- Лезвия для ножей 25 x 125 мм, 6 сегментов."><span class="title">Строительные ножи и лезвия</span><span class="dop"></span></a><br>
 <DT>03 окт: <DD><a href="/catalog/cat175.shtml" title="Новый товар по ИСКЛЮЧИТЕЛЬНО НИЗКОЙ ЦЕНЕ"><span class="title">Пена монтажная</span><span class="dop"> Soudal ЗИМНЯЯ</span></a><br>
 <DT>25 сен: <DD><a href="/catalog/cat414.shtml" title="Расширен ассортимент"><span class="title">Буры по бетону</span><span class="dop"> SDS+</span></a><br>
 <DT>24 сен: <DD><a href="/catalog/cat221.shtml" title="Цены снижены"><span class="title">Шпательная лопатка</span><span class="dop"> 100 мм</span></a><br>
