clean, 1.LUX, GFT-5 ?

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>05 дек: <DD><a href="/catalog/cat46.shtml"  title="Буры и свёрла"><span class="title">Буры SDS+</span></a> <a href="/catalog/cat414.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">HAGWERT</span></a>, <a href="/catalog/cat468.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">OPTIM</span></a><br>
   <DT>28 ноя: <DD><a href="/catalog/cat285.shtml" title="Новые товары"><span class="title">Электророзетки</span><span class="dop"></span></a><br>
   <DT>15 ноя: <DD><a href="/catalog/cat101.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
   <DT>12 ноя: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт</span><span class="dop"> ГФ-021</span></a><br>
