--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>12 дек: <DD><a href="/catalog/cat579.shtml" title="Цены снижены и ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тенты защитные</span><span class="dop"> HARDY</span></a><br>
   <DT>05 дек: <DD><a href="/catalog/cat46.shtml"  title="Буры и свёрла"><span class="title">Буры SDS+</span></a> <a href="/catalog/cat414.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">HAGWERT</span></a>, <a href="/catalog/cat468.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">OPTIM</span></a><br>
   <DT>28 ноя: <DD><a href="/catalog/cat285.shtml" title="Новые товары"><span class="title">Электророзетки</span><span class="dop"></span></a><br>
   <DT>15 ноя: <DD><a href="/catalog/cat101.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
@@ -69,6 +70,18 @@
         title="Валики Roma 18 (HARDY, Польша) на нашем сайте">
         <p>
           <span class="title">Валики Roma 18 (HARDY, Польша)</span><span class="dop"><br>для красок на водной основе</span>
+        </p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1>
+        <a class="cboxElement" href="/img/pic/equip/big/0440-840305.jpg" title="Большое фото: Тенты защитные HARDY (Польша)"><img src="/img/pic/equip/small/0440-840305.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat579.shtml"
+        title="Тенты защитные HARDY (Польша) на нашем сайте">
+        <p>
+          <span class="title">Тенты защитные</span><span class="dop"><br>HARDY (Польша)</span>
+          <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
         </p></a>
   </table>
 </div>
