--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,7 @@
+<DT>31 окт: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
+<DT>29 окт: <DD><a href="/catalog/cat24.shtml"  title="Новый товар: Круг отрезной по металлу пр-ва Лужского Абразивного завода&#xa;125 х 1.2 х 22 мм PREMIUM"><span class="title">Круг отрезной Луга</span><span class="dop"> PREMIUM</span></a><br>
+<DT>15 окт: <DD><a href="/catalog/cat188.shtml" title="Расширен ассортимент"><span class="title">Степлеры скобозабивные</span><span class="dop"> MiLES</span></a><br>
+<DT>12 окт: <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
 <DT>12 окт: <DD><a href="/catalog/cat257.shtml" title="Новый товар"><span class="title">Набор отверток диэлектр.</span><span class="dop"> 7 шт.</span></a><br>
 <DT>11 окт: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
 <DT>10 окт: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
