--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>22 янв: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>21 янв: <DD><a href="/catalog/cat244.shtml" title="Цены снижены"><span class="title">Штангенциркули металлические</span><span class="dop"></span></a><br>
   <DT>15 янв: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>14 янв: <DD><a href="/catalog/cat84.shtml"  title="Цены снижены"><span class="title">Ключи трубные КТР</span><span class="dop"> (газовые)</span></a><br>
   <DT>10 янв: <DD><a href="/catalog/cat617.shtml" title="Расширен ассортимент"><span class="title">Наборы имбусовых ключей</span></a><br>
